lab1/Test/L1-A-6-90.output
Error Type B at Line 7
Error Type B at Line 76
Error Type B at Line 77
Error Type A at Line 80
Error Type B at Line 81
Error Type B at Line 81
Error Type B at Line 84
Error Type B at Line 84
