lab1/Test/L1-A-6-90.cmm
int cAiShhtD8cQRH5t6xTOO ( ) {
  if ( SVFqNCECRt9vk3CVIU ( ) [ - OPslbBt29HUaNw ( 
    ) = ! Mr1K = f2i01Uf4 ] + GCcxDVVlLz ( ) / e ( o2P8LFDhbD101emaNo 
    ) + eQ64dHZk ( ) - ! ! GsV0FJGbV1B ( yUwR7h40yM5j202vVS 
    ) * P0INLKm0 - ! 850005329 . ru3ioYp . sWeMqfxAQ + 
    - - ! IEQ533hRGHnHL1 / ! sCYGb * - KQ990yAqm_OAGbgRDNhg 
    * 1974769688 / ! EI ! tAplBDA0zAoTARnD <= QhdIsyb 
    ( ) / eC6aAwbDG ( ) * X1BnwFFKJp3DB ( ) / - tK_fBTWazbfme 
    < ( dmwHeuoe ( NJTrhYdvMh2 ) * GXz - G1JJhYqZeIGMvq028TcB 
    - ne46jMF + hpJU4kF + gTJCWpto2spSUqsS + AeSW7PNWJTLO 
    - gEbL + CQzeR1FO + Q7iBn393_5h_fw - H9 + FobmpHxuw8AbEC8k 
    > GrxDHctoNkqY && E3cmyDjAIfpdIlfZOgSG || AerCa248smhvPwq 
    || T7eh7_ ) / - zujfDr6 / GTaWzHlL0G8 ( ) . ybZ4nQki3LsH1J3UB 
    / ! poRJAo - ! RoCmQttw34 > ! ! hjFNR ( ) . Y2VqAdhg3o 
    * jwVxm ( rQJv3R1gE4WLUSIJt ) + ! natdpI_HiU / JeM6BmzlojHp_eQj1 
    * qTIAtYu_bRdDDroXrN * ZXoYwcyjiKkoXzLDXe / HAEtL96nzNr6Ho 
    - ( hK38CUqDawJ0LYgndf ) . ZntGmhNkGP + - taBeG5eAkp44_tcrgi2q 
    / dcTz6u / JnEXNBkDYgMm * VE / T6ta4MieGM9 * IdBWnKHC7A0y8kz 
    * gtkk6E7k * KeT24 * o - TlOwYq4NTS44kjWp ( ) / h 
    * b_F_umFr3fqjneU4KG * rXb - ! Hyh / EERS9SNbqiZNTI 
    * c1_7WuVSML_J == - vZAHa7cLI_xL ( dAccz5HY8s2k8Nf 
    ) / ! HTX7XSUSpoHHKL_ - P3H ( c ) [ hEfdk ] [ KKCmoRi8SWf6Z5KF1sw 
    ] * nT6V0oc5AXZRi * B * SelX5twW8O0C_eiPo8Wd / CARji 
    * d2SuhGmnR1m0h_Ry * _N0twXvppBSGlj43I + - CTy8od9KVr04gn 
    * NU5e4FgD / FSsrm0zX59L + ! MJ / UKeL_T + - PUE <= 
    - EALVH_cq5FL ( ktfBqPAy ) / - AxoiGFsP / ! U5QWIz9M9iOIctZir 
    - 744590710 . _L6Rrg8FO1lNi * NnOXL3uPU / zk * P9YPSjtoK3T9 
    * DYN2bArSQyysKg05z >= - Fh2OVyPG * - sYe99c0umFo_yTrjQNl 
    * - gNDRtf1 < dalL7o73vmR5O5FEW ( GNDrK01G3tfQkLCFSPnV 
    ( Lz5j ) = SN6dDMY1FZwhnTf3Dr , hETAE8h23D ) * - fA 
    / - ik7R2PVB - - meUGRbqSz5 - ( zbPkVKCITUgKtrgRz 
    ) [ usJ1MnIAk_P3F5YxrOsU ] + - t9 - ! v5F - ! pja0dncWUuRT07sqWS 
    / _AYAdlog8ehJnG == LIu ( ! of6p / TzP0HZQzZdY1cLjzYu 
    <= ZvsiW && Hd9Yuwnll && hFilklMkmZ2 || vIcLyrxz30Gir6c2 
    || eD9an ) / ! n90qZbNEhrAC3O / ! PK0O4VO9qu7XY - 
    ! gQaJE2ObAMfcZlySfP8 / Fr12yQgw >= ! pniy4 ( ) . 
    P0o8o6VQQ7bY2hKJ * 1984680742.815540632 . PgZT3Eepg 
    * - qoijqx1AVXB * cwOTERi ( lE6BSVQZ_ ) / ! deCr7U4LrKeqT 
    * ! VrifcL / ! Up3OJ / - A02tYDE4ZLigj2uPQIQD * ! 
    JqGYqcYCGRmgYGt / - rh / - maHcoF3ULiwpptA3elz8 - 
    jpNOj6lPYYI6BYkX6h7 ( Xoa1 ) * Yb * BtixhK6wKG0M5jOqqwk9 
    / QeAvbxgV4U1BCZ6icgE + 1880491314.1752617888 != ! 
    ! - TYTJNjHV9FRnmw / - a5wgSZeEIe * ! RqS + - R >= 
    sEA6ldWE8ZWcWIWN4 ( 1624765489.1753554520 = Gv1E5Rz 
    , T9Z ) [ ! h1t = U8U3zXS ] - - nR3LOEH - ! JmgsCf0W67UNt 
    / NTyCA3ZHH6d9K6DjuZ / eQ6DpxgsbJu / z1IS1tEUGxjQkJDQ5FK 
    / gdvL2JBOf * KndQaYX1o4Am_BYFxe - ! E5bMS7sBhZj0V_q1Y 
    && - - ! tY * - Rq / ! FDPX8RUmHUU7 * - f <= - ogpNk 
    == ! Ce7p0aKB + zXxkfVBwg8oxoroNM1 == ! d0zxOmlrnV8aUZc 
    == - nX6Zmzbuzrr / F / P99sN6SnMjsXY0Qa + tYeZznrP43oBF 
    + u08cQ9ANQEhnR - wFpUNMHLa + kA7SeGKnBQJpl >= - n94MJiyZaBp7fh 
    / cJ1l7iw / rI2SJC / anXq4fC - AzSL >= VF ( ) * GmXdL 
    * lPhwKRSsme - NzvsHLuCzRjQ6asbiTFk + mtp1MhjDEeZr6R5cl7L 
    + QwY43RiFcLmX7dPXkqc7 + Ckv1s - xI5oNwFUVz121hNqZKz 
    < B5Ey1bkIH ( ) . v93wcFrfDrjy4hkFsVzS / eQaWLkN6AoXu8vy5 
    / zg9mBYbSry1eN6f8 * cfbyfa6Q707m1wsO0 * J * u4spaBgZFOhXnrLuZ1 
    / upic9 / X2 / kvUsgj3YgIvsLm0hKq + kf1KJAA1kt5Nxe7qh 
    - Zgju2fZpCq4muYBMS7 + zSVd4pu6Gf1rywyEJ0vX && - ! 
    - MfXTpf1X * - TdrY5YvF * - bdL7FkuiK1QKD7wx + ! B 
    <= - RX4R3jP0 > OolEMzO ( ) * chp79Q5dU9T_ * Dkxom0k5MhX 
    / AqU - zUX93llPw9L2A9ggg - _6HBzpQhKeoZiCV5G9qb + 
    Dq8YgouIfq4UtdjBo - TCjlQXKlyQFTpSwy >= - p3UjVS0qJE05 
    / IcoNBHMguxM * SaSI0ONx5Zk * j_WG4qIks - e86oEJ != 
    tJ_0hHeqbcMMA7Q26hH ( ) / YawLxwgFaBQAjqIVlwH * iZZE0uZgUyKLU 
    + ZD1wRM_YnfzaGiPxnAU > - jAX4vRmJcI - v_AV - fyw0o5qpDVoUEj 
    <= b9I ( ) . u . jW54YFnkj * GN2KB * mN7V > - tcUo6NeMtxPQvp 
    / R8MOVWLbOfTRJvwzG + cu4Ui530Q - Q2l != - EYk7r4HU 
    / G_EA >= lx3ko [ BTQZR0miQjQRFVJDk83O ] + nJbyh49CCBFBSlHYh 
    - hi8_T37lA && ! - EbrQfg . hM * ! zimM7kFHF + - oNgZt 
    - - UnePJ1DSnY / wobpuLZ * OQ != ! BKQuYzvEuxY0jwu8Q8 
    / pco6N * gewJYIE_uR5t6 < ! AIX - zZni9s_T0snmM + 
    MrDldPPU - ZFFwuAJ3koe - qKsgnf + eSk3hmrk6ZmGS + 
    WYWY07 <= ! jkBcydXIeJ5AZNaaZP && eUNlmR_Z3Snpt ( 
    ) / ! x7iTOg1x8EqMVl + ( br7DdONp ) * f8jT4P5Qt5 * 
    wxl8HhZTkmq_iUAM * xEhAre6GmYPcY * UdAIR8E )   if 
    ( ! / C / _iMwOJ56Ix3NMZ9 && thA || S5y6Enw6 || yT9xo3pDVDf3sI8MtbB 
    )   ERf28tPJ_ if ;


}\
, struct kIZ5UzRmlrG62q BuMZ6Ex7J5c int HFZNuYMV [ 
  114619702 ] ) {
}
=  